# rpg_sound_board

./: .gitignore  Cargo.toml
src/: main.rs
src/sounds/: config.rs  player.rs
