[package]
name = "soundboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soloud = "1.0.5"
clap = { version = "4.5.20", features = ["derive"] }
config = { version = "0.14.1", features = ["yaml"] }
ctrlc = "3.4.5"
lazy_static = "1.5"
crossterm = "0.28.1"